--- a/BookReview/app/views/books/show.html.erb
+++ b/BookReview/app/views/books/show.html.erb
@@ -16,10 +16,15 @@
 	<div class="col-md-4">
 
 		<!--where to review/ratings will go-->
+		
+
 		<div>
 			<%= link_to "Add Review", new_book_review_path(@book) %>
 		</div>
 
+		<%= render @book.review %>
+
+ 
 	</div>
 </div>
 
