--- a/BookReview/app/views/books/show.html.erb
+++ b/BookReview/app/views/books/show.html.erb
@@ -22,7 +22,7 @@
 			<%= link_to "Add Review", new_book_review_path(@book) %>
 		</div>
 
-		<%= render @book.review %>
+		<%= render @book.review unless @book.review.nil? %>
 
  
 	</div>
